<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HospitalDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/hospital_image_dialog"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/no_description"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/hospital_name_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hospital_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hospital_address_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hospital_address" />

        <TextView
            android:id="@+id/hospital_opening_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/opening_hour" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/call_hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_call"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorAccent"
            android:text="@string/call_button"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/call_for_ambulance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_ambulance"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorAccent"
            android:text="@string/ambulance_button"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/hospital_direction_on_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_direction"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorAccent"
            android:text="@string/direction_button"
            android:textAllCaps="false"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
